@@ -534,6 +534,13 @@ usage information). Then one must specify this
 fields of the problem entry in the MySQL database (empty means that
 the default script should be used).
 
+The shipped <tt>test_solution.sh</tt> has support for enabling a
+presentation-error to be returned as a judging result. For this to
+work, you need to uncomment the marked lines near the bottom of
+this script. A presentation error occurs when the output only
+differs in whitespace from the reference output. This is counted
+as an incorrect submission.
+
 <sect>Other configuration issues
 <p>
 
