@@ -27,6 +27,7 @@ E_TIMELIMIT=102
 E_RUNERROR=103
 E_OUTPUT=104
 E_ANSWER=105
+E_PRESENTATION=106
 E_INTERN=127 # Internal script error
 
 ### GLOBAL CONFIG INCLUDE START ###
